exercise2.02/manifests/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: default
      port: 1234
      protocol: TCP
      targetPort: 3001
