exercise2.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
